--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -1,3 +1,14 @@
 .error {
   color: red;
 }
+
+body {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+iframe {
+  width: 100%;
+  min-height: 100vh;
+}
