--- a/src/views/layout/base.hbs
+++ b/src/views/layout/base.hbs
@@ -10,7 +10,8 @@
 
   <link rel="icon" href="/favicon.ico">
   <link rel="stylesheet" href="/styles/base.css">
-
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script>axios.default.withCredentials = true</script>
   <title>CrearCV {{#if htmlTitle}}| {{htmlTitle}}{{/if}}</title>
 </head>
 
