--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -3,7 +3,7 @@
 
   <nav class="navbar">
     <ul>
-      <li class="navbar--item"><a href="/create">
+      <li class="navbar--item"><a href="/myCVs">
           Mis CVs
         </a></li>
       <li class="navbar--item profile">
