--- a/src/views/createLogged.hbs
+++ b/src/views/createLogged.hbs
@@ -1,10 +1,16 @@
 {{#if cvs}}
-<h2>Tus perfiles</h2>
+<h2>Tus CVs</h2>
 
 <ul>
   {{#each cvs}}
   <li>
-    <a href="/create/{{this.id}}">{{this.id}}</a>
+    <a href="myCVs/edit/{{this._id}}">
+    {{#if this.cvName}}
+    {{this.cvName}}
+    {{else}}
+    {{this._id}}
+    {{/if}}
+    </a>
   </li>
   {{/each}}
 </ul>
