Changed CV+User models && its html form (frontend)

--- a/src/views/createForm.hbs
+++ b/src/views/createForm.hbs
@@ -56,35 +56,35 @@
 
       <label>
         Titulo
-        <input type="text" name='cv.history.academic.title' value="{{ cv.history.academic.title }}"
-          placeholder="{{cv.history.academic.title}}">
+        <input type="text" name='cv.academic.title' value="{{ cv.academic.title }}"
+          placeholder="{{cv.academic.title}}">
       </label>
       <label>
         Institucion
-        <input type="text" name='cv.history.academic.where' value="{{ cv.history.academic.where }}"
-          placeholder="{{cv.history.academic.where}}">
+        <input type="text" name='cv.academic.where' value="{{ cv.academic.where }}"
+          placeholder="{{cv.academic.where}}">
       </label>
       <label>
         Desde
-        <input type="date" name='cv.history.academic.from' value="{{ cv.history.academic.from }}"
-          placeholder="{{cv.history.academic.from}}">
+        <input type="date" name='cv.academic.from' value="{{ cv.academic.from }}"
+          placeholder="{{cv.academic.from}}">
       </label>
 
       <label>
         Hasta
-        <input type="date" name='cv.history.academic.to' value="{{ cv.history.academic.to }}"
-          placeholder="{{cv.history.academic.to}}">
+        <input type="date" name='cv.academic.to' value="{{ cv.academic.to }}"
+          placeholder="{{cv.academic.to}}">
       </label>
 
       <label>
         Condicion
-        <input type="text" name='cv.history.academic.condition' value="{{ cv.history.academic.condition }}"
-          placeholder="{{cv.history.academic.condition}}">
+        <input type="text" name='cv.academic.condition' value="{{ cv.academic.condition }}"
+          placeholder="{{cv.academic.condition}}">
       </label>
 
       <label>Es actual
-        <input type="checkbox" name='cv.history.academic.isCurrent' value="{{ cv.history.academic.isCurrent }}"
-          placeholder="{{cv.history.academic.isCurrent}}">
+        <input type="checkbox" name='cv.academic.isCurrent' value="{{ cv.academic.isCurrent }}"
+          placeholder="{{cv.academic.isCurrent}}">
       </label>
 
     </div>
@@ -95,35 +95,35 @@
 
       <label>
         Titulo
-        <input type="text" name='cv.history.professional.title' value="{{ cv.history.professional.title }}"
-          placeholder="{{cv.history.professional.title}}">
+        <input type="text" name='cv.professional.title' value="{{ cv.professional.title }}"
+          placeholder="{{cv.professional.title}}">
       </label>
       <label>
         Institucion
-        <input type="text" name='cv.history.professional.where' value="{{ cv.history.professional.where }}"
-          placeholder="{{cv.history.professional.where}}">
+        <input type="text" name='cv.professional.where' value="{{ cv.professional.where }}"
+          placeholder="{{cv.professional.where}}">
       </label>
       <label>
         Desde
-        <input type="date" name='cv.history.professional.from' value="{{ cv.history.professional.from }}"
-          placeholder="{{cv.history.professional.from}}">
+        <input type="date" name='cv.professional.from' value="{{ cv.professional.from }}"
+          placeholder="{{cv.professional.from}}">
       </label>
 
       <label>
         Hasta
-        <input type="date" name='cv.history.professional.to' value="{{ cv.history.professional.to }}"
-          placeholder="{{cv.history.professional.to}}">
+        <input type="date" name='cv.professional.to' value="{{ cv.professional.to }}"
+          placeholder="{{cv.professional.to}}">
       </label>
 
       <label>
         Seniority
-        <input type="text" name='cv.history.professional.seniority' value="{{ cv.history.professional.seniority }}"
-          placeholder="{{cv.history.professional.seniority}}">
+        <input type="text" name='cv.professional.seniority' value="{{ cv.professional.seniority }}"
+          placeholder="{{cv.professional.seniority}}">
       </label>
 
       <label>Es actual
-        <input type="checkbox" name='cv.history.professional.isCurrent' value="{{ cv.history.professional.isCurrent }}"
-          placeholder="{{cv.history.professional.isCurrent}}">
+        <input type="checkbox" name='cv.professional.isCurrent' value="{{ cv.professional.isCurrent }}"
+          placeholder="{{cv.professional.isCurrent}}">
       </label>
     </div>
   </div>
